# tutorials

./: README.md
.github/workflows/: plantuml.yml
codex-llmfoundry/: README.md
codex-playwright/: README.md  pyproject.toml  scrape-directors.py  scrape_directors.py  steps.md  top-directors.csv
codex-playwright/fixtures/: best_director.html  frank_capra.html  john_ford.html  william_wyler.html
codex-playwright/tests/: test_scrape_directors.py
codex-vscode/: README.md
llmfoundry-api-key/: README.md
mapscii-rendering/: README.md
oauth2-proxy/: Caddyfile  README.md  oauth2-proxy.cfg
plantuml/: AWS.puml  Azure.puml  GCP.puml  README.md  icons.sh
short-code/: README.md
system-prompt-elements/: README.md
zoomable-sunburst/: README.md  companies.csv  fake.py  index.html  script.js
