[project]
name = "playwright-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "lxml>=5.2.0",
    "orjson>=3.10.7",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
